--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <meta name="Descripcion" content="Index"
      </head>
      <body>
-     <h1> Programacion Web - 187616 - Miguel Angel Flores Gonzalez </h1>
+     <h1> Programacion Web - 187616 - Miguel Angel Flores Gonzal </h1>
           <!--Llenar el Titulo y pegar el contenido-->
     <h1> Unidad 1 | Actividad 1 : : Tema 1 </h1>
      </body>
