--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
      <meta name="Descripcion" content="Index"
      </head>
      <body>
-     <h1> Programacion Web I  187616 Miguel Angel Flores Gonzalez </h1>
+     <h1> Programacion Web I  187616 </h1>
      <h1> 187616 Miguel Angel Flores Gonzalez </h1>   
         
          
