--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <body>
      <h1> Programacion Web I  187616 </h1>
      <h1> 187616 Miguel Angel Flor Gonzalez </h1>   
-     <ul> <li>Unidad No.1</li></ul> <ol><li>Actividad No.1</li></ol>
+     <ul> <li>Unidad No.1</li><ol><li>Actividad No.1</li></ol></ul> 
 
          
     
