--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
      <body>
      <h1> Programacion Web I  187616 </h1>
      <h1> 187616 Miguel Angel Flores Gonzalez </h1>   
-     <ul> <li>Unidad No.1</li><ol><li>Actividad No.1</li></ol></ul> 
+     <ul> <li>Unidad No.1</li><ol><li>Actividad No.2</li></ol><ol><li>Actividad No.3</li></ol><ol><li>Actividad No.4</li></ol><ol><li>Actividad No.5</li></ol><ol><li>Actividad No.6</li></ol><ol><li>Actividad No.7</li></ol></ul> 
 
          
     
