--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
      </head>
      <body>
      <h1> Programacion Web I  187616 </h1>
-     <h1> 187616 Miguel Angel Flor Gonzalez </h1>   
-     <ul> <li>Unidad No.1</li><ol><li>Actividad No.1</li>
-     </ol><ol><li>Actividad No.2</li></ol>
+     <h1> 187616 Miguel Angel Flores Gonzalez </h1>   
+     <ul> <li>Unidad No.1</li>
+     <ol><li>Actividad No.1</li></ol>
+     <ol><li>Actividad No.2</li></ol>
      <ol><li>Actividad No.3</li></ol>
      <ol><li>Actividad No.4</li></ol>
      <ol><li>Actividad No.5</li></ol>
