--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
      </head>
      <body>
      <h1> Programacion Web I  187616 </h1>
-     <h1> 187616 Miguel Angel Flore Gonzalez </h1>   
+     <h1> 187616 Miguel Angel Flores Gonzalez </h1>   
      <ul> <li>Unidad No.1</li>
      <ol><li>Actividad No.1</li>
-     <li>Actividad No.2</li></ol>
-     <ol><li>Actividad No.3</li></ol>
-     <ol><li>Actividad No.4</li></ol>
-     <ol><li>Actividad No.5</li></ol>
-     <ol><li>Actividad No.6</li></ol>
-     <ol><li>Actividad No.7</li></ol></ul> 
+     <li>Actividad No.2</li>
+     <li>Actividad No.3</li>
+     <li>Actividad No.4</li>
+     <li>Actividad No.5</li>
+     <li>Actividad No.6</li>
+     <<li>Actividad No.7</li></ol></ul> 
 
          
     
