--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
      <li>Actividad No.4</li>
      <li>Actividad No.5</li>
      <li>Actividad No.6</li>
-     <<li>Actividad No.7</li></ol></ul> 
+     <li>Actividad No.7</li></ol></ul> 
 
          
     
