--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html>
     <head>
     <title>Programacion Web </title>
@@ -19,9 +19,9 @@
      <li>Actividad No.5</li>
      <li>Actividad No.6</li>
      <li>Actividad No.7</li></ol></ul> 
-     <ul> <li>Unidad No.2</li>
-     <ul> <li>Unidad No.3</li>
-     <ul> <li>Proyecto</li>
+     <ul> <li>Unidad No.2</li></ul>
+     <ul> <li>Unidad No.3</li></ul>
+     <ul> <li>Proyecto</li></ul>
     
 
          
