Update Actividad No 5.html

--- a/Actividad No 5.html
+++ b/Actividad No 5.html
@@ -4,7 +4,7 @@
 <title> Unidad 1 | Actividad 05 </title>
 <link rel="icon" type="image/x-icon" href="favicon.ico">
 <meta charset="utf-8">
-<meta name="Autor" content="Rubén Cárdenas Sánchez">
+<meta name="Autor" content="Miiguel Angel Flores Gonzalez">
 <meta name="Fecha" content="13 de febrero de 2025">
 <meta name="Descripción" content="Listas">
 </head>
