--- a/Actividad No 3.html
+++ b/Actividad No 3.html
@@ -5,7 +5,7 @@
 <title> Unidad 1 | Actividad 03 </title>
 <link rel="icon" type="image/x-icon" href="favicon.ico"> 
 <meta charset="utf-8">
-<meta name="Autor" content="Rubén Cárdenas Sánchez"> 
+<meta name="Autor" content="Miguel Angel Flores Gonzalez"> 
 <meta name="Fecha" content="12 de febrero de 2025">
 <meta name="Descripción" content="Párrafo">
 </head>
