--- a/index.html
+++ b/index.html
@@ -21,6 +21,11 @@
      <li>Actividad No.7</li></ol></ul> 
      <ul> <li>Unidad No.2</li></ul>
      <ul> <li>Unidad No.3</li></ul>
+       <li>Actividad No.3</li>
+     <li>Actividad No.8</li>
+     <li>Actividad No.9</li>
+     <li>Actividad No.9-1</li>
+     <li>Actividad No.10</li>
      <ul> <li>Proyecto</li></ul>
     
 
