Update Actividad No 7.html

--- a/Actividad No 7.html
+++ b/Actividad No 7.html
@@ -11,7 +11,7 @@
 <body>
 <h1> Unidad 1 | Actividad 07 :: Tema (Enlaces) </h1>
 <a href="https://www.upslp.edu.mx/upslp/"> UPSLP </a> <br>
-<a href="Actividad_04-1.html"> Ver Actividad 4.1 </a> <br>
+<a href="Actividad No 4-1.html"> Ver Actividad 4.1 </a> <br>
 <a href="archivos/construccion.jpg" target="_blank"> Ver imágen... </a> <br>
 <a href="archivos/ahorcado.cpp" target="_blank"> Ver código...</a> <br>
 <a href="archivos/javascript.html" target="_blank"> Ver página web...</a>
