--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
     <li>Actividad No.2-1 <i>(Tablas Combinadas)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Unidad%202/U2%20Actividad%20No%20%202-1.html"> Link </a> <br></li>
     <li>Actividad No.3 <i>(Estilos)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Unidad%202/U2%20Actividad%20No%203.html"> Link </a> <br></li>
     <li>Actividad No.4 <i>(Fuente)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Unidad%202/U2%20Actividad%20No%204.html"> Link </a> <br></li>
-    <li>Actividad No.4-1 <i>(Hola mundo)</i><a href=""> Link </a> <br></li>
-    <li>Actividad No.4-2 <i>(Hola mundo)</i><a href=""> Link </a> <br></li>
+    <li>Actividad No.4-1 <i>(Tablas y colores)</i><a href=""> Link </a> <br></li>
+    <li>Actividad No.4-2 <i>(Lista, tablas e Imagenes)</i><a href=""> Link </a> <br></li>
     <li>Actividad No.5 <i>(Menu)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Unidad%202/U2%20Actividad%20No%205.html"> Link </a> <br></li>
-    <li>Actividad No.6 <i>(Hola mundo)</i><a href=""> Link </a> <br></li>
-    <li>Actividad No.7 <i>(Hola mundo)</i><a href=""> Link </a> <br></li>
-    <li>Actividad No.7-1 <i>(Hola mundo)</i><a href=""> Link </a> <br></li></ol></ul>
+    <li>Actividad No.6 <i>(Bootstrap)</i><a href=""> Link </a> <br></li>
+    <li>Actividad No.7 <i>(Menu c/Bootstrap)</i><a href=""> Link </a> <br></li>
+    <li>Actividad No.7-1 <i>(Menu "Proyecto")</i><a href=""> Link </a> <br></li></ol></ul>
      <b><ul> <li>Unidad No.3</li></ul></b>
      <b><ul> <li>Proyecto</li></ul></b>
     
