--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
     <head>
     <title>Programacion Web </title>
@@ -6,7 +6,7 @@
      <meta charset="utf-8">
      <meta name="Autor" content="Miguel Angel Flores">
      <meta name="Fecha" content="10/02/2025">
-     <meta name="Descripcion" content="Index"
+     <meta name="Descripcion" content="Index">
      </head>
      <body>
     <h1> Portafolio </h1>
