--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
     <li>Actividad No.7-1 <i>(Menu "Proyecto")</i><a href=""> Link </a> <br></li></ol></ul>
      <b><ul> <li>Unidad No.3</li></ul></b>
      <b><ul> <li>Proyecto</li></ul></b>
+     </body>
+</html>
+
     
 
          
