--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Programacion Web </title>
+    <title>Programacion We </title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
      <meta charset="utf-8">
      <meta name="Autor" content="Miguel Angel Flores">
