--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
      <li>Actividad No.9-1 <i>(Quimica Organiza)</i><a href=""> Link </a> <br></li>
      <li>Actividad No.10 <i>(Mapa)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%2010.html"> Link </a> <br></li></ol></ul> 
      <b><ul> <li>Unidad No.2</li></b>
-    <ol><li>Actividad No.1 <i>(Tablas)</i><a href="https://github.com/miguel10054/miguel10054.github.io/blob/d8a6927673522400bd7ff4a1f602384b69cbebcd/U2%20Actividad%20No%201.html"> Link </a> <br></li>
+    <ol><li>Actividad No.1 <i>(Tablas)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Unidad%202/U2%20Actividad%20No%201.html"> Link </a> <br></li>
     <li>Actividad No.2 <i>(Tablas Combinadas)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Unidad%202/U2%20Actividad%20No%202.html"> Link </a> <br></li>
     <li>Actividad No.2-1 <i>(Tablas Combinadas)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Unidad%202/U2%20Actividad%20No%20%202-1.html"> Link </a> <br></li>
     <li>Actividad No.3 <i>(Estilos)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Unidad%202/U2%20Actividad%20No%203.html"> Link </a> <br></li>
