--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Programacion  </title>
+    <title>Programacion web  </title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
      <meta charset="utf-8">
      <meta name="Autor" content="Miguel Angel Flores">
@@ -13,7 +13,7 @@
      <h1> Programacion Web I  </h1>
      <h1> 187616 Miguel Angel Flores Gonzalez </h1>   
      <b><ul> <li>Unidad No.1</li></b>
-     <ol><li>Actividad No.1 <i>(Hola mundo)</i><a href="Activivad No 1.html"> Link </a> <br></li>
+     <ol><li>Actividad No.1 <i>(Hola mundo)</i> <a href="Actividad No 1.html" class="btn-ir">Ir a</a><br></li>
      <li>Actividad No.2 <i>(Titulos)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%202.html"> Link </a> <br></li>
      <li>Actividad No.2-1 <i>(Mapa de estilo)</i><a href=""> Link </a> <br></li>
      <li>Actividad No.3 <i>(Parrafo)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%203.html"> Link </a> <br></li>
