--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Programacion we  </title>
+    <title>Programacion web  </title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
      <meta charset="utf-8">
      <meta name="Autor" content="Miguel Angel Flores">
@@ -15,10 +15,10 @@
      <b><ul> <li>Unidad No.1</li></b>
      <ol><li>Actividad No.1 <i>(Hola mundo)</i> <a href="Actividad No 1.html" class="btn-ir">link</a><br></li>
      <li>Actividad No.2 <i>(Titulos)</i><a href="Actividad No 2.html" class="btn-ir"> Link </a> <br></li>
-     <li>Actividad No.2-1 <i>(Mapa de estilo)</i><a href=""> Link </a> <br></li>
-     <li>Actividad No.3 <i>(Parrafo)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%203.html"> Link </a> <br></li>
-     <li>Actividad No.4 <i>(Listas I)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%204.html"> Link </a> <br></li>
-     <li>Actividad No.4-1 <i>(Plan de estudios)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%204-1.html"> Link </a> <br></li>
+     <li>Actividad No.2-1 <i>(Mapa de estilo)</i><a href="" class="btn-ir" > Link </a> <br></li>
+     <li>Actividad No.3 <i>(Parrafo)</i><a href="Actividad No 3.html" class="btn-ir"> Link </a> <br></li>
+     <li>Actividad No.4 <i>(Listas I)</i><a href="Actividad No 4.html"class="btn-ir"> Link </a> <br></li>
+     <li>Actividad No.4-1 <i>(Plan de estudios)</i><a href="Actividad 4-1.html" class="btn-ir"> Link </a> <br></li>
      <li>Actividad No.5 <i>(Listas II)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%205.html"> Link </a> <br></li>
      <li>Actividad No.6 <i>(Widget)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%206.html"> Link</a> <br></li>
      <li>Actividad No.7 <i>(Enlaces)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%207.html"> Link </a> <br></li>
