--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    <title>Programacion web  </title>
+    <title>Programacion we  </title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
      <meta charset="utf-8">
      <meta name="Autor" content="Miguel Angel Flores">
@@ -19,13 +19,13 @@
      <li>Actividad No.3 <i>(Parrafo)</i><a href="Actividad No 3.html" class="btn-ir"> Link </a> <br></li>
      <li>Actividad No.4 <i>(Listas I)</i><a href="Actividad No 4.html"class="btn-ir"> Link </a> <br></li>
      <li>Actividad No.4-1 <i>(Plan de estudios)</i><a href="Actividad 4-1.html" class="btn-ir"> Link </a> <br></li>
-     <li>Actividad No.5 <i>(Listas II)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%205.html"> Link </a> <br></li>
-     <li>Actividad No.6 <i>(Widget)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%206.html"> Link</a> <br></li>
-     <li>Actividad No.7 <i>(Enlaces)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%207.html"> Link </a> <br></li>
-     <li>Actividad No.8 <i>(Imagenes)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%208.html"> Link </a> <br></li>
-     <li>Actividad No.9 <i>(Formatos)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%209.html"> Link </a> <br></li>
-     <li>Actividad No.9-1 <i>(Quimica Organiza)</i><a href=""> Link </a> <br></li>
-     <li>Actividad No.10 <i>(Mapa)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Actividad%20No%2010.html"> Link </a> <br></li></ol></ul> 
+     <li>Actividad No.5 <i>(Listas II)</i><a href="Actividad No5.html"class="btn-ir"> Link </a> <br></li>
+     <li>Actividad No.6 <i>(Widget)</i><a href="Actividad No6.html"class="btn-ir"> Link</a> <br></li>
+     <li>Actividad No.7 <i>(Enlaces)</i><a href="Actividad No7.html"class="btn-ir"> Link </a> <br></li>
+     <li>Actividad No.8 <i>(Imagenes)</i><a href="Actividad No8.html"class="btn-ir"> Link </a> <br></li>
+     <li>Actividad No.9 <i>(Formatos)</i><a href="Actividad No9.html"class="btn-ir"> Link </a> <br></li>
+     <li>Actividad No.9-1 <i>(Quimica Organiza)</i><a href="Actividad No9-1.html"class="btn-ir"> Link </a> <br></li>
+     <li>Actividad No.10 <i>(Mapa)</i><a href=""> Link </a> <br></li></ol></ul> 
      <b><ul> <li>Unidad No.2</li></b>
     <ol><li>Actividad No.1 <i>(Tablas)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Unidad%202/U2%20Actividad%20No%201.html"> Link </a> <br></li>
     <li>Actividad No.2 <i>(Tablas Combinadas)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Unidad%202/U2%20Actividad%20No%202.html"> Link </a> <br></li>
