--- a/index.html
+++ b/index.html
@@ -39,9 +39,15 @@
     <li>Actividad No.7 <i>(Hola mundo)</i><a href=""> Link </a> <br></li>
     <li>Actividad No.7-1 <i>(Hola mundo)</i><a href=""> Link </a> <br></li></ol></ul>
      <b><ul> <li>Unidad No.3</li></ul></b>
-    <ol><li>Actividad No.1 <i>(Hola Mundo)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Unidad%203/U3%20Actividad%201.html"> Link </a> <br></li>
-    <li>Actividad No.2 <i>(Pop-up)</i><a href="file:///C:/Users/187616/OneDrive%20-%20Universidad%20Polit%C3%A9cnica%20de%20San%20Luis%20Potos%C3%AD/Progra%20web/Unidad%203/U3%20Actividad%202.html"> Link </a> <br></li></ol></ul>
-     <b><ul> <li>Proyecto</li></ul></b>
+     <ol><li>Actividad No.1 <i>(Hola mundo)</i> <a href="U3 Actividad 1.html" class="btn-ir">link</a><br></li>
+     <li>Actividad No.2 <i>(Pop-up)</i><a href="U3 Actividad 2.html" class="btn-ir"> Link </a> <br></li>
+     <li>Actividad No.3 <i>(Calculadora)</i><a href="U3 Actividad 3.html" class="btn-ir"> Link </a> <br></li>
+     <li>Actividad No.3-1 <i>(Tablas)</i><a href="U3 Actividad 3-1.html" class="btn-ir"> Link </a> <br></li>
+     <li>Actividad No.4 <i>(GetElementByld)</i><a href="U3 Actividad 4.html"class="btn-ir"> Link </a> <br></li>
+     <li>Actividad No.5 <i>(Formularios)</i><a href="U3A ctividad 5.html" class="btn-ir"> Link </a> <br></li>
+     <li>Actividad No.6 <i>(Eventos)</i><a href="U3 Actividad 6.html"class="btn-ir"> Link </a> <br></li>
+    <li>Actividad No.6 <i>(Controles)</i><a href="U3 Actividad 7.html"class="btn-ir"> Link </a> <br></li>
+ <b><ul> <li>Proyecto</li></ul></b>
      </body>
 </html>
 
