Update U3 Actividad 3.html

--- a/U3 Actividad 3.html
+++ b/U3 Actividad 3.html
@@ -4,7 +4,7 @@
 <head>
     <!-- Título y Metadatos -->
     <title>Unidad 2 | Actividad 03</title>
-    <link rel="icon" type="image/x-icon" href="https://ApexSentinelnn.github.io/Recursos/Logo/ico_pageall.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta charset="utf-8">
     <meta name="Autor" content="Miguel Angel Flores Gonzalez">
     <meta name="Fecha" content="20/05/25">
