Update U3 Actividad 3-1.html

--- a/U3 Actividad 3-1.html
+++ b/U3 Actividad 3-1.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Unidad 3 | Actividad 03-1 :: Tabla de Sumas y Multiplicaciones</title>
-    <link rel="icon" type="image/x-icon" href="https://ApexSentinelnn.github.io/Recursos/Logo/ico_pageall.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta charset="utf-8">
     <meta name="Autor" content="Noe Castillo Gaytan">
     <meta name="Fecha" content="5 de Marzo de 2025">
