--- a/U3 Actividad 5.html
+++ b/U3 Actividad 5.html
@@ -4,7 +4,7 @@
 
 <head>
     <title>Unidad 3 | Activida 5</title>
-    <link rel="icon" type="image/x-icon" href="https://ApexSentinelnn.github.io/Recursos/Logo/ico_pageall.ico">
+    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta charset="utf-8">
     <meta name="Autor" content="Miguel Angel Flores Gonzalez">
     <meta name="Fecha" content="20 de Mayo de 2025">
