--- a/U3 Actividad 6.html
+++ b/U3 Actividad 6.html
@@ -5,7 +5,7 @@
     <tittle> Unidad 3 | Actividad 06</tittle>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta charset="utf-8">
-    <meta name="Autor" content="Noe Castillo Gaytan">
+    <meta name="Autor" content="Miguel Angel Flores Gonzalez">
        <meta name="Fecha" content="20 de mayo de 2025">
         <meta name="Descripcion" content="JavaScript">
         <style>
