Update U3 Actividad 3-1.html

--- a/U3 Actividad 3-1.html
+++ b/U3 Actividad 3-1.html
@@ -5,7 +5,7 @@
     <title>Unidad 3 | Actividad 03-1 :: Tabla de Sumas y Multiplicaciones</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <meta charset="utf-8">
-    <meta name="Autor" content="Noe Castillo Gaytan">
+    <meta name="Autor" content="Miguel Angel Flores Gonzalez">
     <meta name="Fecha" content="5 de Marzo de 2025">
     <meta name="Descripcion" content="Tabla Colores">
     <meta name="Fecha" content="5 de Marzo de 2025">
